title overflow fix
	modified:   src/styles/publications.css

--- a/src/styles/publications.css
+++ b/src/styles/publications.css
@@ -15,31 +15,30 @@
 
 .publication__title {
   margin: 0px;
+
+padding-top: 10px;
+padding-left: 13px;
+padding-right: 13px;
+padding-bottom: 10px;
+
+font-family: var(--font-family-karelia-bold);
+font-weight: 700;
+font-size: 14px;
+line-height: 18.94px;
+
+height: calc(2 * 18.94px + 11px);
+
+border-bottom: 1px solid var(--color-borders);
+
+display: -webkit-box;
+-webkit-box-orient: vertical;
+-webkit-line-clamp: 2;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: normal;
+
+word-break: keep-all;
   
-  padding-top: 10px;
-  padding-left: 13px;
-  padding-right: 13px;
-  padding-bottom: 10px;
-
-  height: 55px;
-  
-  font-family: var(--font-family-karelia-bold);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 18.94px;
-
-  border-bottom: 1px solid var(--color-borders);
-
-  display: -webkit-box;
-
-  word-break: keep-all;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: normal;
-
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  text-overflow: -o-ellipsis-lastline;
 }
 
 .publication__year {
